# datagouv-cli

./: .gitignore  README.md  pyproject.toml
src/cli_gouv/: main.py  mcp_server.py
src/cli_gouv/api/: __init__.py  client.py  dataservices.py  datasets.py  metrics.py  resources.py
src/cli_gouv/commands/: __init__.py  dataservice.py  dataset.py  resource.py  search.py
src/cli_gouv/output/: json.py  table.py
src/datagouv_cli/: __init__.py  main.py  mcp_server.py
src/datagouv_cli/api/: dataservices.py  datasets.py  metrics.py  resources.py
src/datagouv_cli/commands/: dataservice.py  dataset.py  resource.py  search.py
src/datagouv_cli/output/: table.py
tests/: conftest.py  test_client.py  test_dataservice.py  test_dataservices.py  test_dataset.py  test_datasets.py  test_main.py  test_mcp_server.py  test_metrics.py  test_resource_cmd.py  test_resources.py  test_search_cmd.py
