[project]
name = "cli-gouv"
version = "0.1.0"
description = "CLI to interact with data.gouv.fr - French Open Data platform"
readme = "README.md"
authors = [
    { name = "Hadrien Blanc", email = "blanc.hadrien@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "anyio>=4",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "mypy>=1.10",
]

[project.scripts]
cli-gouv = "cli_gouv.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
